<resources>
    <string name="app_name">Decorate68</string>
    <string name="add_order">Добавление заказа</string>
    <string name="menu">Развернуть меню</string>
    <string name="search">Поиск</string>
    <string name="customer">Заказчик</string>
    <string name="comment">Подробности заказа</string>
    <string name="contacts">Контактные данные заказчика</string>
    <string name="box">Короб</string>
    <string name="standart">Стандартный</string>
    <string name="woody">Деревянный</string>
    <string name="cost">Стоимость заказа</string>
    <string name="preCost">Предоплата</string>
    <string name="firstDate">Дата принятия заказа</string>
    <string name="lastDate">Дата исполнения заказа</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="prompt_email">Имя пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in_short">Начать работу</string>
    <string name="signOut">Сменить пользователя</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="regi">Регистрация нового пользователя</string>
    <string name="welcome">Вы успешно вошли в программу</string>
    <string name="invalid_username">Нет такого пользователя</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="login_failed">Вы не смогли войти в программу</string>
    <string name="item1">Добавление заказа</string>
    <string name="item2">Заказы в работе</string>
    <string name="item3">Архив заказов</string>
    <string name="closeMenu">Закрыть боковое меню</string>
    <string name="email">E-Mail</string>
    <string name="hello">Здравствуй!</string>
    <string name="password">Пароль</string>
    <string name="addChanges">Принять изменения</string>
    <string name="toArchive">Отправить в архив</string>
    <string name="recover">Восстановить</string>
    <string name="del">Удалить</string>
    <string name="loadImage">Загрузить из галереи</string>
    <string name="photo">Сделать фото</string>
</resources>