<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_foreground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/lobster_two"
                    android:textSize="20sp"
                    android:id="@+id/orderID"/>

                <ImageButton
                    android:id="@+id/menuOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@android:dimen/app_icon_size"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_action_name"
                    android:onClick="onClickPopupMenuOpen" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/comment"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="50" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contacts" />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/box" />
            </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/boxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/grey"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/Standart"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:text="@string/standart"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/Woody"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:text="@string/woody"
                android:textColor="@color/black" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/precost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preCost"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstDate" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastDate" />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>