<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderActivity">
    <!--tools:openDrawer="end"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_foreground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item1"
                android:layout_centerInParent="true"
                android:fontFamily="@font/lobster_two"
                android:textSize="20sp"/>

            <ImageButton
                android:id="@+id/menuOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@android:dimen/app_icon_size"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_action_name"
                android:onClick="onClickMenuOpen" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/id_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_Comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="50" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_Contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contacts" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:text="@string/box"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@color/transparentBlack"/>

                <CheckBox
                    android:id="@+id/standart"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/standart"
                    android:textColor="@color/black" />

                <CheckBox
                    android:id="@+id/woody"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:text="@string/woody"
                    android:textColor="@color/black" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cost"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_precost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/preCost"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_firstDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstDate" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_lastDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastDate" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_AddOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle"
                    android:onClick="onClickBtnAddOrder"/>

                <Button
                    android:id="@+id/btn_CancelAddOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle"
                    android:onClick="onClickBtnCancelOrder"/>
            </LinearLayout>


            <!--<ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_LoadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/loadImage"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle"/>
&lt;!&ndash;                    android:onClick="onClickBtnLoadImage"/>&ndash;&gt;
                <Button
                    android:id="@+id/btn_MakePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/photo"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle"
                    android:onClick="onClickBtnMakePhoto"/>
            </LinearLayout>-->




        </LinearLayout>
    </ScrollView>
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/side_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="end">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>